# lor

./: .gitignore  .gitmodules  404.html  LICENSE.md  README.md  chapter_1.html  index.html  prescript5.html  prescripts.html  print.html  searchindex.js  searchindex.json
.github/: auto-assign.yml
.github/workflows/: docsbuild.yml
.trunk/: trunk.yaml
prescripts/1/: forge.py  pyproject.toml
prescripts/1,2,3/: 1.py
prescripts/2/: paper.py  purpur.py  pyproject.toml
prescripts/3/: 2083.py  3733.py
prescripts/4/: 1.py  2.py  3.py  4.py  ?.py  accel.py  choicepicker.py  library.py  prototype.py  prototype2-1.py  prototype2-2.py  prototype2.py  somecounter.py  somelight.py  special.py  timer.py
prescripts/5/: 1.py  15873.py  4299.py  4589.py  7595.py  93375.py  problems.py  pyproject.toml  test.py  test.toml
prescripts/5/modules/: library.py
prescripts/6/: .gitignore  main.py  pyproject.toml  validate.py
prescripts/7/: main.py  pyproject.toml
web/: book.toml
web/src/: SUMMARY.md  prescript5.md  prescripts.md
