[tool.poetry]
name = "prescript"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.7"
requests = "2.28.1"

[tool.poetry.group.nvim.dependencies]
pynvim = "0.4.3"

[tool.poetry.group.quiltandfabric.dependencies]
xmltodict = "0.13.0"

[tool.poetry.group.forge.dependencies]
simple-term-menu = "1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
