[tool.poetry]
name = "prescripts"
version = "0.1.0"
description = ""
authors = ["misilelaboratory and sherry, dongkangma"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
