[tool.poetry]
name = "validate"
version = "0.1.0"
description = "Some(repeat)"
authors = ["MisileLaboratory"]
license = "MisileLab License"

[tool.poetry.dependencies]
python = "3.11.0"
matplotlib = "3.6.2"
numpy = "1.24.0"
misilelibpy = { path = "../MisileLib/misilelib-python" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
