[tool.poetry]
name = "sleepdatatograph"
version = "0.1.0"
description = ""
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
matplotlib = "3.6.2"
misilelibpy = { path = "../MisileLib/misilelib-python" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
